@@ -4,7 +4,7 @@
 \alias{ggiraph}
 \title{ggiraph}
 \usage{
-ggiraph(code, ggobj = NULL, pointsize = 12, width_svg = 6,
+ggiraph(code, ggobj = NULL, pointsize = 12, width = 0.7, width_svg = 6,
   height_svg = 6, tooltip_extra_css, hover_css, tooltip_opacity = 0.9,
   tooltip_offx = 10, tooltip_offy = 0, zoom_max = 1,
   selection_type = "multiple", selected_css, flexdashboard = FALSE, ...)
@@ -16,6 +16,8 @@ ggiraph(code, ggobj = NULL, pointsize = 12, width_svg = 6,
 be ignored if this argument is supplied.}
 
 \item{pointsize}{the default pointsize of plotted text in pixels, default to 12.}
+
+\item{width}{widget width ratio (0 < width <= 1)}
 
 \item{width_svg, height_svg}{svg viewbox width and height in inches}
 
